--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
 <html>
     <head>
         <title>Ziemlich Rosinenswert 🍇</title>
+        <link rel="stylesheet" type="text/css" href="fett.css" media="screen" />
     </head>
-    
     <body>
         <h1>Bonjour!</h1>
+        <center><img src="https://cdn.discordapp.com/emojis/357626126761328641.png?v=1"></center>
     </body>
-    
-    <style>
-        h1 {
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-            color: yellowgreen;
-        }
-        background {
-            background-color: black;
-        }
-    </style>
 </html>
