--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Ziemlich Rosinenswert 🍇</title>
+        <title>GRAPE!🍇</title>
         <link rel="stylesheet" type="text/css" href="fett.css" media="screen" />
     </head>
     <body>
