--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>GRAPE!🍇</title>
         <link rel="stylesheet" type="text/css" href="fett.css" media="screen" />
+        <link rel = "icon" href = "icon.ico" type = "image/x-icon"> 
     </head>
     <body>
         <h1>Bonjour!</h1>
